feat: Implement comprehensive push notification system for iOS
- Add Firebase Messaging package and iOS configuration
- Create NotificationService with FCM token management
- Implement notification permission handling and request flow
- Add useNotifications React hook for state management
- Update UserProfile interface to include FCM token fields
- Integrate notification controls in Settings screen
- Add iOS Info.plist configuration for background notifications
- Create NotificationTest component for debugging
- Add comprehensive notification translations
- Handle foreground, background, and app-closed notification states
- Support family and user-specific notification sending
- Add proper error handling and loading states

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -149,7 +149,11 @@
     "darkModeDescription": "Use dark theme",
     "notifications": "Notifications",
     "pushNotifications": "Push Notifications",
-    "pushNotificationsDescription": "Receive reminder notifications",
+    "pushNotificationsDescription": "Receive reminder notifications and family updates",
+    "loadingNotifications": "Loading notification settings...",
+    "notificationError": "Failed to load notification settings",
+    "notificationPermissionDenied": "Notification Permission Denied",
+    "notificationPermissionDeniedMessage": "To receive notifications, please enable them in your device settings.",
     "privacySecurity": "Privacy & Security",
     "dataPrivacy": "Data & Privacy",
     "dataPrivacyDescription": "Manage your data and privacy settings",
