Add notification testing component with comprehensive notification features

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -194,5 +194,124 @@
     "low": "Low",
     "medium": "Medium",
     "high": "High"
+  },
+  "notifications": {
+    "taskCreated": "New Family Task",
+    "taskCreatedMessage": "{{name}} added a new task: \"{{taskTitle}}\"",
+    "taskAssigned": "Task Assigned to You",
+    "taskAssignedMessage": "{{name}} assigned you to: \"{{taskTitle}}\"",
+    "taskUpdated": "Task Updated",
+    "taskUpdatedMessage": "{{name}} updated: \"{{taskTitle}}\"",
+    "taskDueDateChanged": "Task Due Date Changed",
+    "taskDueDateChangedMessage": "{{name}} changed the due date for: \"{{taskTitle}}\"",
+    "taskPriorityChanged": "Task Priority Changed",
+    "taskPriorityChangedMessage": "{{name}} changed the priority for: \"{{taskTitle}}\"",
+    "taskDescriptionUpdated": "Task Description Updated",
+    "taskDescriptionUpdatedMessage": "{{name}} updated the description for: \"{{taskTitle}}\"",
+    "taskCompleted": "Task Completed",
+    "taskCompletedMessage": "{{name}} completed: \"{{taskTitle}}\"",
+    "taskReminder": "Task Reminder",
+    "taskReminderMessage": "Reminder: \"{{taskTitle}}\"",
+    "taskDueSoon": "Task Due Soon",
+    "taskDueSoonMessage": "\"{{taskTitle}}\" is due soon!",
+    "taskOverdue": "Task Overdue",
+    "taskOverdueMessage": "\"{{taskTitle}}\" is overdue!",
+    "dailyTaskSummary": "Daily Task Summary",
+    "dailyTaskSummaryMessage": "You have tasks to complete today!",
+    "familyInvitation": "Family Invitation",
+    "familyInvitationMessage": "{{name}} invited you to join their family",
+    "testNotification": "Test Notification",
+    "testNotificationMessage": "This is a test notification from ClearCue",
+    "testingTitle": "🔔 Notification Testing",
+    "status": "Status",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "basicNotifications": "Basic Notifications",
+    "taskNotifications": "Task Notifications",
+    "requestPermissions": "Request Permissions",
+    "sendTest": "Send Test Notification",
+    "testTaskCreated": "Test Task Created",
+    "testTaskAssigned": "Test Task Assigned",
+    "testTaskUpdated": "Test Task Updated",
+    "testTaskCompleted": "Test Task Completed",
+    "testTaskReminder": "Test Task Reminder",
+    "requesting": "Requesting...",
+    "sending": "Sending...",
+    "permissionsGranted": "Notification permissions granted!",
+    "permissionDenied": "Permission Denied",
+    "permissionDeniedMessage": "Please enable notifications in device settings",
+    "permissionError": "Failed to request permissions",
+    "testSent": "Test notification sent!",
+    "testError": "Failed to send test notification",
+    "noFamily": "No Family",
+    "noFamilyMessage": "You need to be in a family to test task notifications",
+    "taskCreatedSent": "Task creation notification sent to family!",
+    "taskCreatedError": "Failed to send task creation notification",
+    "taskAssignedSent": "Task assignment notification sent!",
+    "taskAssignedError": "Failed to send task assignment notification",
+    "taskUpdatedSent": "Task update notification sent!",
+    "taskUpdatedError": "Failed to send task update notification",
+    "taskCompletedSent": "Task completion notification sent!",
+    "taskCompletedError": "Failed to send task completion notification",
+    "taskReminderSent": "Task reminder notification sent!",
+    "taskReminderError": "Failed to send task reminder notification",
+    "loadingSettings": "Loading notification settings...",
+    "familyRequired": "⚠️ Some notifications require you to be in a family",
+    "howItWorks": "ℹ️ How it works:",
+    "howItWorks1": "• Notifications are sent to family members when tasks are created",
+    "howItWorks2": "• Assigned members get specific notifications",
+    "howItWorks3": "• Updates and completions notify all involved members",
+    "howItWorks4": "• Reminders are sent for upcoming and overdue tasks",
+    "testTaskTitle": "Test Family Task",
+    "testTaskDescription": "This is a test task created for notification testing",
+    "testAssignedTitle": "Test Assigned Task",
+    "testAssignedDescription": "This is a test task assigned to you",
+    "testUpdatedTitle": "Test Updated Task",
+    "testUpdatedDescription": "This is a test task that was updated",
+    "testCompletedTitle": "Test Completed Task",
+    "testCompletedDescription": "This is a test task that was completed",
+    "testReminderTitle": "Test Reminder Task",
+    "testReminderDescription": "This is a test task reminder",
+    "testUser": "Test User"
+  },
+  "language": {
+    "title": "Language",
+    "description": "Choose your preferred language",
+    "current": "Current Language",
+    "selectLanguage": "Select Language",
+    "systemDefault": "System Default",
+    "english": "English",
+    "spanish": "Spanish",
+    "french": "French",
+    "german": "German",
+    "italian": "Italian",
+    "portuguese": "Portuguese",
+    "dutch": "Dutch",
+    "swedish": "Swedish",
+    "norwegian": "Norwegian",
+    "danish": "Danish",
+    "finnish": "Finnish",
+    "polish": "Polish",
+    "czech": "Czech",
+    "hungarian": "Hungarian",
+    "romanian": "Romanian",
+    "bulgarian": "Bulgarian",
+    "croatian": "Croatian",
+    "slovak": "Slovak",
+    "slovenian": "Slovenian",
+    "estonian": "Estonian",
+    "latvian": "Latvian",
+    "lithuanian": "Lithuanian",
+    "greek": "Greek",
+    "russian": "Russian",
+    "ukrainian": "Ukrainian",
+    "turkish": "Turkish",
+    "arabic": "Arabic",
+    "chinese": "Chinese",
+    "japanese": "Japanese",
+    "korean": "Korean",
+    "hindi": "Hindi",
+    "languageChanged": "Language changed successfully!",
+    "languageChangeError": "Failed to change language"
   }
 } 
