feat: major UI/UX improvements and new features
- Redesigned settings page with tab navigation (Account/General)
- Enhanced profile section with avatar and edit name functionality
- Fixed calendar screen header spacing and navigation
- Implemented swipe-to-delete functionality for reminders
- Fixed quick actions text jumping issue
- Updated app icons and branding
- Improved translations and localization
- Enhanced authentication flow and user profile management
- Added new screens: countdown, list-detail, lists, reminders
- Updated dependencies and project configuration

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -11,6 +11,7 @@
     "tagPlaceholder": "Add a tag",
     "assignTo": "Assign To (Optional)",
     "assignToPlaceholder": "Assign to family member",
+    "unassigned": "Unassigned",
     "favorite": "Mark as favorite",
     "notifications": "Enable notifications",
     "recurring": "Make recurring",
@@ -28,6 +29,7 @@
     }
   },
   "calendar": {
+    "title": "Calendar",
     "import": "Import",
     "importing": "Importing...",
     "reminders": "Reminders",
@@ -63,12 +65,15 @@
     "filter": "Filter",
     "family": "Family",
     "categories": "Categories",
+    "countdown": "Countdown",
+    "lists": "Lists",
     "recentActivity": "Recent Activity",
     "noRecentActivity": "No recent activity.",
     "stats": {
       "total": "Total",
       "pending": "Pending",
-      "favorites": "Favorites"
+      "favorites": "Favorites",
+      "overdue": "Overdue"
     }
   },
   "family": {
@@ -136,11 +141,21 @@
     }
   },
   "settings": {
+    "title": "Settings",
+    "general": "General",
     "welcomeUser": "Welcome User",
     "userEmail": "user@example.com",
     "anonymousUser": "Anonymous User",
     "notAvailable": "Not available",
     "today": "Today",
+    "editName": "Edit Name",
+    "namePlaceholder": "Enter your name",
+    "nameEditDescription": "Update your display name to personalize your experience",
+    "nameRequired": "Name Required",
+    "nameRequiredMessage": "Please enter a valid name",
+    "nameUpdated": "Name Updated",
+    "nameUpdatedMessage": "Your name has been updated successfully",
+    "nameUpdateError": "Failed to update name. Please try again.",
     "accountInfo": "Account Information",
     "email": "Email",
     "memberSince": "Member Since",
@@ -180,7 +195,9 @@
     "loading": "Loading...",
     "error": "Error",
     "success": "Success",
-    "retry": "Retry"
+    "retry": "Retry",
+    "save": "Save",
+    "saving": "Saving..."
   },
   "taskTypes": {
     "task": "Task",
@@ -280,6 +297,37 @@
     "current": "Current Language",
     "selectLanguage": "Select Language",
     "systemDefault": "System Default",
+    "en": "English",
+    "es": "Spanish",
+    "fr": "French",
+    "de": "German",
+    "it": "Italian",
+    "pt": "Portuguese",
+    "nl": "Dutch",
+    "sv": "Swedish",
+    "no": "Norwegian",
+    "da": "Danish",
+    "fi": "Finnish",
+    "pl": "Polish",
+    "cs": "Czech",
+    "hu": "Hungarian",
+    "ro": "Romanian",
+    "bg": "Bulgarian",
+    "hr": "Croatian",
+    "sk": "Slovak",
+    "sl": "Slovenian",
+    "et": "Estonian",
+    "lv": "Latvian",
+    "lt": "Lithuanian",
+    "el": "Greek",
+    "ru": "Russian",
+    "uk": "Ukrainian",
+    "tr": "Turkish",
+    "ar": "Arabic",
+    "zh": "Chinese",
+    "ja": "Japanese",
+    "ko": "Korean",
+    "hi": "Hindi",
     "english": "English",
     "spanish": "Spanish",
     "french": "French",
@@ -313,5 +361,51 @@
     "hindi": "Hindi",
     "languageChanged": "Language changed successfully!",
     "languageChangeError": "Failed to change language"
+  },
+  "countdown": {
+    "title": "Countdowns",
+    "newCountdown": "New Countdown",
+    "editCountdown": "Edit Countdown",
+    "noCountdowns": "No Countdowns Yet",
+    "noCountdownsDescription": "Create your first countdown to start tracking important events",
+    "createCountdown": "Create Countdown",
+    "anonymousNotice": "Sign in to save your countdowns and access them across devices.",
+    "signinTitle": "Sign in to Save Countdowns",
+    "signinMessage": "Create an account to save your countdowns and access them across all your devices.",
+    "titleLabel": "Title *",
+    "titlePlaceholder": "Enter countdown title",
+    "descriptionLabel": "Description",
+    "descriptionPlaceholder": "Optional description",
+    "targetDateLabel": "Target Date *",
+    "targetDatePlaceholder": "YYYY-MM-DD",
+    "targetTimeLabel": "Target Time (Optional)",
+    "targetTimePlaceholder": "HH:MM (24-hour format)",
+    "save": "Save",
+    "cancel": "Cancel",
+    "delete": "Delete",
+    "deleteConfirm": "Are you sure you want to delete \"{{title}}\"?",
+    "timesUp": "Time's up!",
+    "days": "Days",
+    "hours": "Hours",
+    "minutes": "Minutes",
+    "seconds": "Seconds",
+    "validation": {
+      "titleRequired": "Please enter a title for your countdown",
+      "dateRequired": "Please select a target date",
+      "invalidDate": "Please enter a valid date (YYYY-MM-DD)",
+      "invalidTime": "Please enter a valid time (HH:MM)",
+      "pastDate": "Target date cannot be in the past"
+    }
+  },
+  "reminders": {
+    "title": "Reminders",
+    "noReminders": "No reminders yet",
+    "noPendingReminders": "No pending reminders",
+    "noFavoriteReminders": "No favorite reminders",
+    "noOverdueReminders": "No overdue reminders",
+    "delete": "Delete",
+    "deleteReminder": "Delete Reminder",
+    "deleteConfirm": "Are you sure you want to delete this reminder?",
+    "deleteError": "Failed to delete reminder. Please try again."
   }
 } 
