--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -28,6 +28,7 @@
     }
   },
   "calendar": {
+    "title": "Calendario",
     "import": "Importar",
     "importing": "Importando...",
     "reminders": "Recordatorios",
@@ -63,12 +64,15 @@
     "filter": "Filtrar",
     "family": "Familia",
     "categories": "Categorías",
+    "countdown": "Cuenta Regresiva",
+    "lists": "Listas",
     "recentActivity": "Actividad Reciente",
     "noRecentActivity": "No hay actividad reciente.",
     "stats": {
       "total": "Total",
-      "pending": "Pendientes",
-      "favorites": "Favoritos"
+      "pending": "Pendiente",
+      "favorites": "Favoritos",
+      "overdue": "Vencido"
     }
   },
   "family": {
@@ -136,11 +140,21 @@
     }
   },
   "settings": {
+    "title": "Configuración",
+    "general": "General",
     "welcomeUser": "Bienvenido Usuario",
     "userEmail": "usuario@ejemplo.com",
     "anonymousUser": "Usuario Anónimo",
     "notAvailable": "No disponible",
     "today": "Hoy",
+    "editName": "Editar Nombre",
+    "namePlaceholder": "Ingresa tu nombre",
+    "nameEditDescription": "Actualiza tu nombre de usuario para personalizar tu experiencia",
+    "nameRequired": "Nombre Requerido",
+    "nameRequiredMessage": "Por favor ingresa un nombre válido",
+    "nameUpdated": "Nombre Actualizado",
+    "nameUpdatedMessage": "Tu nombre ha sido actualizado exitosamente",
+    "nameUpdateError": "Error al actualizar nombre. Por favor inténtalo de nuevo.",
     "accountInfo": "Información de la Cuenta",
     "email": "Email",
     "memberSince": "Miembro Desde",
@@ -180,7 +194,9 @@
     "loading": "Cargando...",
     "error": "Error",
     "success": "Éxito",
-    "retry": "Reintentar"
+    "retry": "Reintentar",
+    "save": "Guardar",
+    "saving": "Guardando..."
   },
   "taskTypes": {
     "task": "Tarea",
@@ -280,6 +296,37 @@
     "current": "Idioma Actual",
     "selectLanguage": "Seleccionar Idioma",
     "systemDefault": "Predeterminado del Sistema",
+    "en": "Inglés",
+    "es": "Español",
+    "fr": "Francés",
+    "de": "Alemán",
+    "it": "Italiano",
+    "pt": "Portugués",
+    "nl": "Holandés",
+    "sv": "Sueco",
+    "no": "Noruego",
+    "da": "Danés",
+    "fi": "Finlandés",
+    "pl": "Polaco",
+    "cs": "Checo",
+    "hu": "Húngaro",
+    "ro": "Rumano",
+    "bg": "Búlgaro",
+    "hr": "Croata",
+    "sk": "Eslovaco",
+    "sl": "Esloveno",
+    "et": "Estonio",
+    "lv": "Letón",
+    "lt": "Lituano",
+    "el": "Griego",
+    "ru": "Ruso",
+    "uk": "Ucraniano",
+    "tr": "Turco",
+    "ar": "Árabe",
+    "zh": "Chino",
+    "ja": "Japonés",
+    "ko": "Coreano",
+    "hi": "Hindi",
     "english": "Inglés",
     "spanish": "Español",
     "french": "Francés",
@@ -312,6 +359,52 @@
     "korean": "Coreano",
     "hindi": "Hindi",
     "languageChanged": "¡Idioma cambiado exitosamente!",
-    "languageChangeError": "Error al cambiar idioma"
+    "languageChangeError": "Error al cambiar el idioma"
+  },
+  "countdown": {
+    "title": "Cuentas Regresivas",
+    "newCountdown": "Nueva Cuenta Regresiva",
+    "editCountdown": "Editar Cuenta Regresiva",
+    "noCountdowns": "Aún No Hay Cuentas Regresivas",
+    "noCountdownsDescription": "Crea tu primera cuenta regresiva para comenzar a rastrear eventos importantes",
+    "createCountdown": "Crear Cuenta Regresiva",
+    "anonymousNotice": "Inicia sesión para guardar tus cuentas regresivas y acceder a ellas en todos los dispositivos.",
+    "signinTitle": "Inicia Sesión para Guardar Cuentas Regresivas",
+    "signinMessage": "Crea una cuenta para guardar tus cuentas regresivas y acceder a ellas en todos tus dispositivos.",
+    "titleLabel": "Título *",
+    "titlePlaceholder": "Ingresa el título de la cuenta regresiva",
+    "descriptionLabel": "Descripción",
+    "descriptionPlaceholder": "Descripción opcional",
+    "targetDateLabel": "Fecha Objetivo *",
+    "targetDatePlaceholder": "AAAA-MM-DD",
+    "targetTimeLabel": "Hora Objetivo (Opcional)",
+    "targetTimePlaceholder": "HH:MM (formato 24 horas)",
+    "save": "Guardar",
+    "cancel": "Cancelar",
+    "delete": "Eliminar",
+    "deleteConfirm": "¿Estás seguro de que quieres eliminar \"{{title}}\"?",
+    "timesUp": "¡Se acabó el tiempo!",
+    "days": "Días",
+    "hours": "Horas",
+    "minutes": "Minutos",
+    "seconds": "Segundos",
+    "validation": {
+      "titleRequired": "Por favor ingresa un título para tu cuenta regresiva",
+      "dateRequired": "Por favor selecciona una fecha objetivo",
+      "invalidDate": "Por favor ingresa una fecha válida (AAAA-MM-DD)",
+      "invalidTime": "Por favor ingresa una hora válida (HH:MM)",
+      "pastDate": "La fecha objetivo no puede estar en el pasado"
+    }
+  },
+  "reminders": {
+    "title": "Recordatorios",
+    "noReminders": "Aún no hay recordatorios",
+    "noPendingReminders": "No hay recordatorios pendientes",
+    "noFavoriteReminders": "No hay recordatorios favoritos",
+    "noOverdueReminders": "No hay recordatorios vencidos",
+    "delete": "Eliminar",
+    "deleteReminder": "Eliminar Recordatorio",
+    "deleteConfirm": "¿Estás seguro de que quieres eliminar este recordatorio?",
+    "deleteError": "Error al eliminar recordatorio. Por favor inténtalo de nuevo."
   }
 } 
