--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -28,6 +28,7 @@
     }
   },
   "calendar": {
+    "title": "Calendrier",
     "import": "Importer",
     "importing": "Importation...",
     "reminders": "Rappels",
@@ -63,12 +64,15 @@
     "filter": "Filtrer",
     "family": "Famille",
     "categories": "Catégories",
+    "countdown": "Compte à Rebours",
+    "lists": "Listes",
     "recentActivity": "Activité Récente",
     "noRecentActivity": "Aucune activité récente.",
     "stats": {
       "total": "Total",
       "pending": "En attente",
-      "favorites": "Favoris"
+      "favorites": "Favoris",
+      "overdue": "En retard"
     }
   },
   "family": {
@@ -136,11 +140,21 @@
     }
   },
   "settings": {
+    "title": "Paramètres",
+    "general": "Général",
     "welcomeUser": "Bienvenue Utilisateur",
     "userEmail": "utilisateur@exemple.com",
     "anonymousUser": "Utilisateur Anonyme",
     "notAvailable": "Non disponible",
     "today": "Aujourd'hui",
+    "editName": "Modifier le Nom",
+    "namePlaceholder": "Entrez votre nom",
+    "nameEditDescription": "Mettez à jour votre nom d'affichage pour personnaliser votre expérience",
+    "nameRequired": "Nom Requis",
+    "nameRequiredMessage": "Veuillez entrer un nom valide",
+    "nameUpdated": "Nom Mis à Jour",
+    "nameUpdatedMessage": "Votre nom a été mis à jour avec succès",
+    "nameUpdateError": "Échec de la mise à jour du nom. Veuillez réessayer.",
     "accountInfo": "Informations du Compte",
     "email": "Email",
     "memberSince": "Membre Depuis",
@@ -180,7 +194,9 @@
     "loading": "Chargement...",
     "error": "Erreur",
     "success": "Succès",
-    "retry": "Réessayer"
+    "retry": "Réessayer",
+    "save": "Enregistrer",
+    "saving": "Enregistrement..."
   },
   "taskTypes": {
     "task": "Tâche",
@@ -280,6 +296,37 @@
     "current": "Langue Actuelle",
     "selectLanguage": "Sélectionner la Langue",
     "systemDefault": "Par Défaut du Système",
+    "en": "Anglais",
+    "es": "Espagnol",
+    "fr": "Français",
+    "de": "Allemand",
+    "it": "Italien",
+    "pt": "Portugais",
+    "nl": "Néerlandais",
+    "sv": "Suédois",
+    "no": "Norvégien",
+    "da": "Danois",
+    "fi": "Finnois",
+    "pl": "Polonais",
+    "cs": "Tchèque",
+    "hu": "Hongrois",
+    "ro": "Roumain",
+    "bg": "Bulgare",
+    "hr": "Croate",
+    "sk": "Slovaque",
+    "sl": "Slovène",
+    "et": "Estonien",
+    "lv": "Letton",
+    "lt": "Lituanien",
+    "el": "Grec",
+    "ru": "Russe",
+    "uk": "Ukrainien",
+    "tr": "Turc",
+    "ar": "Arabe",
+    "zh": "Chinois",
+    "ja": "Japonais",
+    "ko": "Coréen",
+    "hi": "Hindi",
     "english": "Anglais",
     "spanish": "Espagnol",
     "french": "Français",
@@ -313,5 +360,51 @@
     "hindi": "Hindi",
     "languageChanged": "Langue changée avec succès !",
     "languageChangeError": "Échec du changement de langue"
+  },
+  "countdown": {
+    "title": "Compteurs à Rebours",
+    "newCountdown": "Nouveau Compteur à Rebours",
+    "editCountdown": "Modifier le Compteur à Rebours",
+    "noCountdowns": "Aucun Compteur à Rebours Encore",
+    "noCountdownsDescription": "Créez votre premier compteur à rebours pour commencer à suivre les événements importants",
+    "createCountdown": "Créer un Compteur à Rebours",
+    "anonymousNotice": "Connectez-vous pour sauvegarder vos compteurs à rebours et y accéder sur tous les appareils.",
+    "signinTitle": "Connectez-vous pour Sauvegarder les Compteurs à Rebours",
+    "signinMessage": "Créez un compte pour sauvegarder vos compteurs à rebours et y accéder sur tous vos appareils.",
+    "titleLabel": "Titre *",
+    "titlePlaceholder": "Entrez le titre du compteur à rebours",
+    "descriptionLabel": "Description",
+    "descriptionPlaceholder": "Description optionnelle",
+    "targetDateLabel": "Date Cible *",
+    "targetDatePlaceholder": "AAAA-MM-JJ",
+    "targetTimeLabel": "Heure Cible (Optionnel)",
+    "targetTimePlaceholder": "HH:MM (format 24 heures)",
+    "save": "Enregistrer",
+    "cancel": "Annuler",
+    "delete": "Supprimer",
+    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer \"{{title}}\" ?",
+    "timesUp": "Temps écoulé !",
+    "days": "Jours",
+    "hours": "Heures",
+    "minutes": "Minutes",
+    "seconds": "Secondes",
+    "validation": {
+      "titleRequired": "Veuillez entrer un titre pour votre compteur à rebours",
+      "dateRequired": "Veuillez sélectionner une date cible",
+      "invalidDate": "Veuillez entrer une date valide (AAAA-MM-JJ)",
+      "invalidTime": "Veuillez entrer une heure valide (HH:MM)",
+      "pastDate": "La date cible ne peut pas être dans le passé"
+    }
+  },
+  "reminders": {
+    "title": "Rappels",
+    "noReminders": "Aucun rappel pour le moment",
+    "noPendingReminders": "Aucun rappel en attente",
+    "noFavoriteReminders": "Aucun rappel favori",
+    "noOverdueReminders": "Aucun rappel en retard",
+    "delete": "Supprimer",
+    "deleteReminder": "Supprimer le Rappel",
+    "deleteConfirm": "Êtes-vous sûr de vouloir supprimer ce rappel ?",
+    "deleteError": "Échec de la suppression du rappel. Veuillez réessayer."
   }
 } 
